--- a/web/src/main/resources/templates/information/informations.html
+++ b/web/src/main/resources/templates/information/informations.html
@@ -27,11 +27,11 @@
 		<div class="mainwrapper clearfix">
 			<div class="aside fl">
 				<a th:if="${category.url =='HYYW'}" class="active">行业要闻</a>
-				<a th:unless="${category.url =='HYYW'}" href="/informationCategory/HYYW">行业要闻</a>
+				<a th:unless="${category.url =='HYYW'}" href="/informationCategorys/行业要闻">行业要闻</a>
 				<a th:if="${category.url =='XPCG'}" class="active">新品成果</a>
-				<a th:unless="${category.url =='XPCG'}" href="/informationCategory/XPCG">新品成果</a>
+				<a th:unless="${category.url =='XPCG'}" href="/informationCategorys/新品成果">新品成果</a>
 				<a th:if="${category.url =='CSDT'}" class="active">厂商动态</a>
-				<a th:unless="${category.url =='CSDT'}" href="/informationCategory/CSDT">厂商动态</a>
+				<a th:unless="${category.url =='CSDT'}" href="/informationCategorys/厂商动态">厂商动态</a>
 			</div>
 			<div class="mainpanel fr">
 				<div class="news-wrap">
