--- a/web/src/main/resources/templates/user/common/pdf.html
+++ b/web/src/main/resources/templates/user/common/pdf.html
@@ -9,19 +9,7 @@
 						<label>申请单位</label>
 						<input type="text" th:value="${buy.user.company}"/>
 						<label>行业</label>
-						<i th:switch="${buy.user.industryInformation.toString()}">
-							<input type="text" th:case="'ONT'" value="科研院校/所"/>
-							<input type="text" th:case="'TWO'" value="工业检测机构"/>
-							<input type="text" th:case="'THREE'" value="委托合同研究机构"/>
-							<input type="text" th:case="'FOUR'" value="政府机构"/>
-							<input type="text" th:case="'FIVE'" value="商业检测/研发实验室"/>
-							<input type="text" th:case="'SIX'" value="医疗保健机构"/>
-							<input type="text" th:case="'SEVEN'" value="医院及大学医疗中心"/>
-							<input type="text" th:case="'EIGHT'" value="医疗及诊断设备公司"/>
-							<input type="text" th:case="'NINE'" value="制药/生物技术"/>
-							<input type="text" th:case="'TIME'" value="设备材料供应商"/>
-							<input type="text" th:case="'ELEVEN'" value="其他"/>
-						</i>
+						<input type="text" th:value="${buy.user.industryInfo.name}"/>
 						<label>申请部门</label>
 						<input type="text"  th:value="${buy.user.department}"/>
 					</div>
