--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -104,7 +104,7 @@
 				<input type="text" th:field="*{department}"/>
 			</div>
 			<div class="form-group">
-				<label><i>*</i>电话</label>
+				<label><i>*</i>企业电话</label>
 				<input type="text" th:field="*{companyPhone}"/>
 				<i class="error" th:if="${#fields.hasErrors('companyPhone')}" th:errors="*{companyPhone}">必填</i>
 			</div>
@@ -122,7 +122,6 @@
 					<option value="">选择城市</option>
 					<option th:if="${citys!=null}" th:each="city:${citys}" th:text="${city.name}" th:value="${city.id}"></option>
 				</select>
-				<i class="error" th:if="${#fields.hasErrors('province')}" th:errors="*{province}">必填</i>
 				<i class="error" th:if="${#fields.hasErrors('city')}" th:errors="*{city}">必填</i>
 			</div>
 			<div class="form-group">
