--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -9,6 +9,8 @@
 	<meta name="_csrf" th:content="${_csrf.token}" />
 	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 	<script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
+	<script type="text/javascript" th:src="@{/js/province.js}"></script>
+	<script type="text/javascript" th:src="@{/js/validata_signup.js}"></script>
 	<script type="text/javascript">
 		$(function() {
 			var token = $("meta[name='_csrf']").attr("content");
@@ -16,10 +18,6 @@
 	
 			$(document).ajaxSend(function(e, xhr, options) {
 				xhr.setRequestHeader(header, token);
-			});
-			$('#text').click(function(){
-				alert(token);
-				alert(header);
 			});
 		});
 	</script>
@@ -61,19 +59,23 @@
 			<div class="form-group">
 				<label><i>*</i>邮箱</label>
 				<input type="text" th:field="*{email}"/>
+				<i class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>用户名</label>
 				<input type="text" th:field="*{name}"/>
+				<i class="error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>密码</label>
 				<input type="password" th:field="*{password}"/>
+				<i class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>手机号</label>
 				<input type="text" th:field="*{phone}"/>
 				<button class="tel-code">获取验证码</button>
+				<i class="error" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>验证码</label>
@@ -85,6 +87,7 @@
 			<div class="form-group">
 				<label><i>*</i>企业名称（中文）</label>
 				<input type="text" th:field="*{companyNameChina}"/>
+				<i class="error" th:if="${#fields.hasErrors('companyNameChina')}" th:errors="*{companyNameChina}">必填</i>
 			</div>
 			<div class="form-group">
 				<label>企业名称（英文）</label>
@@ -93,64 +96,83 @@
 			<div class="form-group">
 				<label>法人代表</label>
 				<input type="text" th:field="*{legalPerson}"/>
+				<i class="error" th:if="${#fields.hasErrors('legalPerson')}" th:errors="*{legalPerson}">必填</i>
 			</div>
 			<div class="form-group">
 				<label>注册资本</label>
 				<input type="text" th:field="*{registeredCapital}"/>
+				<i class="error" th:if="${#fields.hasErrors('registeredCapital')}" th:errors="*{registeredCapital}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>企业性质</label>
 				<select class="w228" th:field="*{componyType}">
 					<option value="">请选择</option>
-					<option value="1">国企</option>
-					<option value="2">合资</option>
-					<option value="3">民营</option>
+					<option value="外商独资">外商独资</option>
+					<option value="合资企业">合资企业</option>
+					<option value="民营企业">民营企业</option>
+					<option value="国有企业">国有企业</option>
+					<option value="高等院校">高等院校</option>
+					<option value="刑侦机关">刑侦机关</option>
 				</select>
+				<i class="error" th:if="${#fields.hasErrors('componyType')}" th:errors="*{componyType}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>主营产品/服务</label>
 				<input type="text" th:field="*{mainProduct}"/>				
+				<i class="error" th:if="${#fields.hasErrors('mainProduct')}" th:errors="*{mainProduct}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>业务类型</label>
-				<input type="radio" th:field="*{businessType}" value="1"/>生产型
-				<input type="radio" th:field="*{businessType}" value="2"/>生产型
-				<input type="radio" th:field="*{businessType}" value="3"/>生产型
-				<input type="radio" th:field="*{businessType}" value="4"/>生产型
+				<input type="radio" th:field="*{businessType}" value="生产型"/>生产型
+				<input type="radio" th:field="*{businessType}" value="贸易型"/>贸易型
+				<input type="radio" th:field="*{businessType}" value="服务型"/>服务型
+				<input type="radio" th:field="*{businessType}" value="政府机关"/>政府机关
+				<input type="radio" th:field="*{businessType}" value="其它"/>其它
+				<i class="error" th:if="${#fields.hasErrors('businessType')}" th:errors="*{businessType}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>企业规模</label>
 				<select class="w228" th:field="*{scale}">
 					<option value="">请选择</option>
-					<option value="1">111</option>
-					<option value="2">222</option>
-					<option value="3">333</option>
+					<option value="五十人以下">五十人以下</option>
+					<option value="五十到一百人">五十到一百人</option>
+					<option value="一百到五百">一百到五百</option>
+					<option value="超过五百">超过五百</option>
 				</select>
+				<i class="error" th:if="${#fields.hasErrors('scale')}" th:errors="*{scale}">必填</i>
 			</div>
 			<div class="form-group" >
 				<label><i>*</i>年产值</label>
 				<select class="w228" th:field="*{output}">
 					<option value="">请选择</option>
-					<option value="1">111</option>
-					<option value="2">222</option>
-					<option value="3">333</option>
+					<option value="五百万以下">五百万以下</option>
+					<option value="五百万两千万">五百万两千万</option>
+					<option value="两千万至五千万">两千万至五千万</option>
+					<option value="五千万至一亿">五千万至一亿</option>
+					<option value="一亿至五亿">一亿至五亿</option>
+					<option value="五亿以上">五亿以上</option>
 				</select>
+				<i class="error" th:if="${#fields.hasErrors('output')}" th:errors="*{output}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>企业简介</label>
 				<textarea rows="6" th:field="*{content}"></textarea>			
+				<i class="error" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>企业营业执照上传</label>
-				<input type="file" />				
+				<input type="file" name="businessLicense"/>	
+				<i class="error" th:if="${#fields.hasErrors('businessLicenseUrl')}" th:errors="*{businessLicenseUrl}">必填</i>			
 			</div>
 			<div class="form-group">
 				<label><i>*</i>税务登记证上传</label>
-				<input type="file" />				
+				<input type="file" name="taxRegistration"/>				
+				<i class="error" th:if="${#fields.hasErrors('taxRegistrationUrl')}" th:errors="*{taxRegistrationUrl}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>组织结构代码证上传</label>
-				<input type="file" />				
+				<input type="file" name="structureCode"/>				
+				<i class="error" th:if="${#fields.hasErrors('structureCodeUrl')}" th:errors="*{structureCodeUrl}">必填</i>
 			</div>
 			<div class="hd resg-hd">
 				<span>联系信息</span>
@@ -158,42 +180,49 @@
 			<div class="form-group">
 				<label><i>*</i>联系人姓名</label>
 				<input type="text" th:field="*{realName}"/>	
+				<i class="error" th:if="${#fields.hasErrors('realName')}" th:errors="*{realName}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>性别</label>
 				<input type="radio" th:field="*{sex}" value="MALE"/>男
 				<input type="radio" th:field="*{sex}" value="FEMALE"/>女
+				<i class="error" th:if="${#fields.hasErrors('sex')}" th:errors="*{sex}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>职位</label>
 				<input type="text" th:field="*{position}"/>
+				<i class="error" th:if="${#fields.hasErrors('position')}" th:errors="*{position}">必填</i>
 			</div>
 			<div class="form-group">
-				<label><i>*</i>电话</label>
+				<label><i>*</i>企业电话</label>
 				<input type="text" th:field="*{providerPhone}"/>
+				<i class="error" th:if="${#fields.hasErrors('providerPhone')}" th:errors="*{providerPhone}">必填</i>
 			</div>
 			<div class="form-group">
-				<label><i>*</i>传真</label>
+				<label>传真</label>
 				<input type="text" th:field="*{fax}"/>
 			</div>
-			<div class="form-group">
+				<div class="form-group">
 				<label><i>*</i>省/市</label>
 				<select th:field="*{province}">
-					<option value="0">选择省份/市</option>
-					<option value="1">上海市</option>
+					<option value="">选择省份/市</option>
+					<option th:each="province:${provinces}" th:text="${province.name}" th:value="${province.id}"></option>
 				</select>
 				<select th:field="*{city}">
-					<option value="0">选择城市</option>
-					<option value="1">上海市</option>
+					<option value="">选择城市</option>
+					<option th:if="${citys!=null}" th:each="city:${citys}" th:text="${city.name}" th:value="${city.id}"></option>
 				</select>
+				<i class="error" th:if="${#fields.hasErrors('city')}" th:errors="*{city}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>详细地址</label>
 				<input type="text" th:field="*{address}"/>
+				<i class="error" th:if="${#fields.hasErrors('address')}" th:errors="*{address}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>邮政编码</label>
 				<input type="text" th:field="*{code}"/>
+				<i class="error" th:if="${#fields.hasErrors('code')}" th:errors="*{code}">必填</i>
 			</div>
 			<div class="form-group">
 				<label>公司网址</label>
@@ -201,40 +230,17 @@
 			</div>
 			<div class="hd resg-hd">
 				<span>行业信息</span>
+				<i class="error" th:if="${#fields.hasErrors('industryInfo')}" th:errors="*{industryInfo}" style="color: red;">必填</i>
 			</div>
 			<div class="form-group">
 				<ul>
-					<li>
-						<input type="radio"/>商业检测/研发实验室
-					</li>
-					<li>
-						<input type="radio"/>研发实验室
-					</li>
-					<li>
-						<input type="radio"/>实验室
-					</li>
-					<li>
-						<input type="radio"/>研发实验室
-					</li>
-					<li>
-						<input type="radio"/>实验室
-					</li>
-					<li>
-						<input type="radio"/>研发实验室
-					</li>
-					<li>
-						<input type="radio"/>实验室
-					</li>
-					<li>
-						<input type="radio"/>研发实验室
-					</li>
-					<li>
-						<input type="radio"/>实验室
+					<li th:each="info:${infos}" >
+						<input type="radio" th:field="*{industryInfo}" th:value="${info.id}"/><i th:text="${info.name}"></i>
 					</li>
 				</ul>
 			</div>
 			<div class="accept-btn">
-				<input type="checkbox"/>我已阅读并接受《服务协议》
+				<input type="checkbox" checked="checked" id="agreement"/>我已阅读并接受《服务协议》
 			</div>
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 			<div class="resg-btn">
