--- a/admin/src/main/resources/templates/advertisement/createAdvertise.html
+++ b/admin/src/main/resources/templates/advertisement/createAdvertise.html
@@ -5,10 +5,7 @@
 					<div class="form-group">
 						<label class="control-label col-sm-2">分类</label>
 						<div class="col-sm-6">
-							<select class="w300">
-								<option>广告位1</option>
-								<option>广告位2</option>
-								<option>广告位3</option>
+							<select class="w300" ng-options="c.id as c.name for c in categories" ng-model="item.category" required="true">
 							</select>
 						</div>
 					</div>
