--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -146,7 +146,7 @@
 				<select class="w228" th:field="*{output}">
 					<option value="">请选择</option>
 					<option value="五百万以下">五百万以下</option>
-					<option value="五百万两千万">五百万两千万</option>
+					<option value="五百万至两千万">五百万至两千万</option>
 					<option value="两千万至五千万">两千万至五千万</option>
 					<option value="五千万至一亿">五千万至一亿</option>
 					<option value="一亿至五亿">一亿至五亿</option>
