--- a/web/src/main/resources/templates/user/provider/detail.html
+++ b/web/src/main/resources/templates/user/provider/detail.html
@@ -61,10 +61,14 @@
 											<input type="text" th:field="*{legalPerson}" />									
 										</div>
 										<div class="form-group">
-											<label>企业性质<i th:text="*{componyType}"></i></label>
-											<select class="w228">
-												<option>国企</option>
-												<option>民营</option>
+											<label>企业性质</label>
+											<select class="w228" th:field="*{componyType}">
+												<option value="外商独资">外商独资</option>
+												<option value="合资企业">合资企业</option>
+												<option value="民营企业">民营企业</option>
+												<option value="国有企业">国有企业</option>
+												<option value="高等院校">高等院校</option>
+												<option value="刑侦机关">刑侦机关</option>
 											</select>
 										</div>
 										<div class="form-group">
@@ -73,7 +77,9 @@
 										</div>
 										<div class="form-group">
 											<label><i>*</i>行业</label>
-											<input type="text" th:field="*{industryInfo.name}"/>
+											<select class="w228" th:field="*{industryInfo}">
+											<option th:each="info : ${IndustryInfos}" th:value="${info.id}" th:text="${info.name}">brand</option>
+											</select>
 										</div>
 										<div class="form-group">
 											<label><i>*</i>主营产品/服务</label>
@@ -82,22 +88,22 @@
 										<div class="form-group">
 											<label><i>*</i>业务类型</label>
 											<select class="w228" th:field="*{businessType}">
-												<option value="PRODUCTION">生产型</option>
-												<option value="TRADE">贸易型</option>
-												<option value="SERVICE">服务型</option>
-												<option value="FOVERNMENT">政府机关</option>
-												<option value="OTHER">其他</option>
+												<option value="生产型">生产型</option>
+												<option value="贸易型">贸易型</option>
+												<option value="服务型">服务型</option>
+												<option value="政府机关">政府机关</option>
+												<option value="其他">其他</option>
 											</select>
 										</div>
 										<div class="form-group">
 											<label><i>*</i>年产值</label>
 											<select class="w228" th:field="*{output}">
-												<option value="FOLLOWINGFIVEMILLION">五百万以下</option>
-												<option value="FIVEMILLIONTOTWENTYMILLION">五百万至2000万</option>
-												<option value="TWENTYMILLIONTOFIFTYMILLION">2000万至5000万</option>
-												<option value="FIFTYMILLIONTOONEHUBDREDMILLION">5000万至一亿</option>
-												<option value="ONEHUBDREDMILLIONTOFIVE">一亿至五亿</option>
-												<option value="MORETHANFIVEHUBDREDMILLION">五亿以上</option>
+												<option value="五百万以下">五百万以下</option>
+												<option value="五百万至两千万">五百万至两千万</option>
+												<option value="两千万至五千万">两千万至五千万</option>
+												<option value="五千万至一亿">五千万至一亿</option>
+												<option value="一亿至五亿">一亿至五亿</option>
+												<option value="五亿以上">五亿以上</option>
 											</select>
 										</div>
 										<div class="form-group">
@@ -149,7 +155,7 @@
 										</div>
 										<div class="form-group">
 											<label class="top"><i>*</i>企业简介</label>
-											<textarea rows="8" th:field="*{content.content}"></textarea>
+											<textarea rows="8" th:field="*{content}"></textarea>
 										</div>
 										<div class="form-group">
 											<label><i>*</i>企业电话</label>
