--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -27,8 +27,7 @@
 		<div class="screen-one clearfix">
 			<div class="J-banner fl">
 				<div id="J-banner-carousel" class="carousel slide" data-ride="carousel">
-					<i th:each="image,imageStat:${images}">
-					<div data-target="#J-banner-carousel" data-slide-to="1" th:text="${imageStat.index}"></div></i>
+					<div data-target="#J-banner-carousel" data-slide-to="1"></div>
 					<ol class="carousel-indicators">
 						<li data-target="#J-banner-carousel" data-slide-to="0" class="active"></li>
 						<li data-target="#J-banner-carousel" data-slide-to="1" ></li>
