--- a/web/src/main/resources/templates/user/login.html
+++ b/web/src/main/resources/templates/user/login.html
@@ -54,9 +54,10 @@
 					<label>用户名</label>
 					<input th:field="*{name}" type="text" placeholder="邮箱/电话/用户名"/>
 				</div>
-				<div class="form-group">
+				<div class="form-group" style="width: 380px;">
 					<label>密码</label>
 					<input th:field="*{password}" type="password"/>
+					<i class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></i>			
 				</div>
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 				<div class="clearfix">
