增加用户修改信息，修改密码功能

--- a/web/src/main/resources/templates/user/common/changePassword.html
+++ b/web/src/main/resources/templates/user/common/changePassword.html
@@ -32,12 +32,14 @@
 			</div>
 			<div class="mainwrapper clearfix">
 				<div class="aside fl">
-					<a class="active">个人资料</a> <a href="/provider/products?form">发布商品</a>
-					<a href="/provider/products/ALL">商品维护</a> <a href="/provider/count">商品信息统计</a>
+					<a class="active">个人资料</a>
+					<a href="/user/collection">收藏夹</a>
+					<a href="/user/cart">购物车</a>
+					<a href="/user/buyRecords">采购申请</a>
 				</div>
 				<div class="mainpanel fr">
 					<div class="tabs-nav info-tabs bodr">
-						<a href="/provider/detail">基本资料</a> <a class="active">修改密码</a>
+						<a href="/user/detail">基本资料</a> <a class="active">修改密码</a>
 					</div>
 					<div class="tab-conts tab-con">
 
@@ -64,7 +66,7 @@
 				</div>
 			</div>
 		</div>
+		<div class="footer">© 1998 - 2015 SJ Inc. All Rights Reserved</div>
 	</div>
-	<div class="footer">© 1998 - 2015 SJ Inc. All Rights Reserved</div>
 </body>
 </html>
