--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -10,6 +10,7 @@
 		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 		<script th:src="@{/js/jquery-min.js}"></script>
 		<script th:src="@{/js/script.js}"></script>
+		 <script th:src="@{/js/province.js}"></script>
 	</head>
 	<body>
 		<div class="header">
@@ -31,7 +32,7 @@
 					<div class="mainpanel fr">
 						<div class="tabs-nav info-tabs bodr">
 							<a class="active">基本资料</a>
-							<a>修改密码</a>
+							<a href="/user/changePw">修改密码</a>
 						</div>
 						<div class="tab-conts tab-con">
 							<div class="tab-panel form-control">
@@ -53,7 +54,9 @@
 										<label><i>*</i>单位</label>
 										<input type="text" th:field="*{company}"/>
 										<label><i>*</i >行业</label>
-										<input type="text" th:field="*{industryInfo.name}"/>
+										<select class="w228" th:field="*{industryInfo}">
+											<option th:each="info : ${industryInfos}" th:value="${info.id}" th:text="${info.name}">brand</option>
+										</select>
 									</div>
 									<div class="form-group">
 										<label><i>*</i>部门</label>
@@ -68,15 +71,15 @@
 										<input type="text" th:field="*{code}"/>
 									</div>
 									<div class="form-group">
-										<label><i>*</i>省/市</label>
-										<select class="w115">
-											<option>上海市</option>
-											<option>北京市</option>
-										</select>
-										<select class="w115">
-											<option>上海市</option>
-											<option>上海市</option>
-										</select>
+											<label><i>*</i>省/市</label>
+											<select class="w115" th:field="*{province}">
+											<option value="">选择省份/市</option>
+											<option th:each="province:${provinces}" th:text="${province.name}" th:value="${province.id}"></option>
+											</select>
+											<select class="w115" th:field="*{city}">
+											<option value="">选择城市</option>
+											<option th:if="${citys!=null}" th:each="city:${citys}" th:text="${city.name}" th:value="${city.id}"></option>
+											</select>
 										<label><i>*</i>详细地址</label>
 										<input type="text" th:field="*{address}"/>
 									</div>
@@ -84,19 +87,6 @@
 										保存
 									</button>
 								</form>
-							</div>
-							<div class="tab-panel form-control hide w500">
-								<div class="form-group">
-									<label><i>*</i>旧密码</label>
-									<input type="text" />
-								</div>
-								<div class="form-group">
-									<label><i>*</i>新密码</label>
-									<input type="text" />
-								</div>
-								<button class="btn green">
-									保存
-								</button>
 							</div>
 						</div>
 					</div>
