--- a/web/src/main/resources/templates/user/provider/detail.html
+++ b/web/src/main/resources/templates/user/provider/detail.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
   <script th:src="@{/js/jquery-min.js}"></script>
   <script th:src="@{/js/script.js}"></script>
+  <script th:src="@{/js/province.js}"></script>
   <meta name="_csrf" th:content="${_csrf.token}" />
   <meta name="_csrf_header" th:content="${_csrf.headerName}" />
   <script type="text/javascript">
@@ -78,7 +79,7 @@
 										<div class="form-group">
 											<label><i>*</i>行业</label>
 											<select class="w228" th:field="*{industryInfo}">
-											<option th:each="info : ${IndustryInfos}" th:value="${info.id}" th:text="${info.name}">brand</option>
+											<option th:each="info : ${industryInfos}" th:value="${info.id}" th:text="${info.name}">brand</option>
 											</select>
 										</div>
 										<div class="form-group">
