--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -1642,7 +1642,9 @@ button.default{
 	z-index: 2;
 	margin-bottom: -20px;
 }
-
+.basic-info .form-group i.error.ml143{
+	margin-left:143px;
+}
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 	li div.topic-detail{
 		max-height: 152px;
