--- a/web/src/main/resources/templates/user/provider/detail.html
+++ b/web/src/main/resources/templates/user/provider/detail.html
@@ -62,7 +62,7 @@
 											<div class="fl">
 											<label>法人代表</label>
 											<input type="text" th:field="*{legalPerson}" />		
-											<i class="error" th:if="${#fields.hasErrors('legalPerson')}" th:errors="*{legalPerson}"></i>							
+											<i class="error ml143" th:if="${#fields.hasErrors('legalPerson')}" th:errors="*{legalPerson}"></i>							
 											</div>
 										</div>
 										<div class="form-group">
@@ -76,14 +76,14 @@
 												<option value="高等院校">高等院校</option>
 												<option value="刑侦机关">刑侦机关</option>
 											</select>
-											<i class="error" th:if="${#fields.hasErrors('componyType')}" th:errors="*{componyType}"></i>
+											<i class="error ml143" th:if="${#fields.hasErrors('componyType')}" th:errors="*{componyType}"></i>
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label>注册资本</label>
 											<input type="text" th:field="*{registeredCapital}"/>	
-											<i class="error" th:if="${#fields.hasErrors('registeredCapital')}" th:errors="*{registeredCapital}"></i>								
+											<i class="error ml143" th:if="${#fields.hasErrors('registeredCapital')}" th:errors="*{registeredCapital}"></i>								
 											</div>
 										</div>
 										<div class="form-group">
@@ -92,14 +92,14 @@
 											<select class="w228" th:field="*{industryInfo}">
 											<option th:each="info : ${industryInfos}" th:value="${info.id}" th:text="${info.name}">brand</option>
 											</select>
-											<i class="error" th:if="${#fields.hasErrors('industryInfo')}" th:errors="*{industryInfo}"></i>
+											<i class="error ml143" th:if="${#fields.hasErrors('industryInfo')}" th:errors="*{industryInfo}"></i>
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label><i>*</i>主营产品/服务</label>
 											<input type="text" th:field="*{mainProduct}"/>	
-											<i class="error" th:if="${#fields.hasErrors('mainProduct')}" th:errors="*{mainProduct}"></i>								
+											<i class="error ml143" th:if="${#fields.hasErrors('mainProduct')}" th:errors="*{mainProduct}"></i>								
 											</div>
 										</div>
 										<div class="form-group">
@@ -112,7 +112,19 @@
 												<option value="政府机关">政府机关</option>
 												<option value="其他">其他</option>
 											</select>
-											<i class="error" th:if="${#fields.hasErrors('businessType')}" th:errors="*{businessType}"></i>
+											<i class="error ml143" th:if="${#fields.hasErrors('businessType')}" th:errors="*{businessType}"></i>
+											</div>
+										</div>
+										<div class="form-group">
+											<div class="fl">
+											<label><i>*</i>企业规模</label>
+											<select class="w228" th:field="*{scale}">
+												<option value="五十人以下">五十人以下</option>
+												<option value="五十到一百人">五十到一百人</option>
+												<option value="一百到五百">一百到五百</option>
+												<option value="超过五百">超过五百</option>
+											</select>
+											<i class="error ml143" th:if="${#fields.hasErrors('scale')}" th:errors="*{scale}"></i>
 											</div>
 										</div>
 										<div class="form-group">
@@ -126,16 +138,9 @@
 												<option value="一亿至五亿">一亿至五亿</option>
 												<option value="五亿以上">五亿以上</option>
 											</select>
-											<i class="error" th:if="${#fields.hasErrors('output')}" th:errors="*{output}"></i>
+											<i class="error ml143" th:if="${#fields.hasErrors('output')}" th:errors="*{output}"></i>
 											</div>
 										</div>
-										<div class="form-group">
-											<div class="fl">
-											<label>公司网址</label>
-											<input type="text" th:field="*{website}"/>		
-											</div>
-										</div>
-										
 										<div class="form-group">
 											<div class="fl">
 											<label><i>*</i>省/市</label>
@@ -147,18 +152,21 @@
 											<option value="">选择城市</option>
 											<option th:if="${citys!=null}" th:each="city:${citys}" th:text="${city.name}" th:value="${city.id}"></option>
 											</select>
+											<i class="error ml143" th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></i>
 											</div>
 										</div>	
 										<div class="form-group">
 											<div class="fl">
 											<label><i>*</i>详细地址</label>
 											<input type="text" th:field="*{address}"/>	
+											<i class="error ml143" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></i>
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label><i>*</i>邮政编码</label>
 											<input type="text" th:field="*{code}"/>	
+											<i class="error ml143" th:if="${#fields.hasErrors('code')}" th:errors="*{code}"></i>
 											</div>
 										</div>
 									</div>
@@ -166,7 +174,7 @@
 										<div class="form-group">
 											<div class="fl">
 											<label>注册邮箱</label>
-											<input type="text" th:value="*{email}" readonly="readonly"/>
+											<input type="text" th:field="*{email}" readonly="readonly"/>
 											</div>
 										</div>
 										<div class="form-group">
@@ -178,13 +186,15 @@
 										<div class="form-group">
 											<div class="fl">
 											<label><i>*</i>联系人姓名</label>
-											<input type="text" th:field="*{realName}"/>									
+											<input type="text" th:field="*{realName}"/>	
+											<i class="error ml143" th:if="${#fields.hasErrors('realName')}" th:errors="*{realName}"></i>								
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label><i>*</i>职位</label>
-											<input type="text" th:field="*{position}"/>									
+											<input type="text" th:field="*{position}"/>	
+											<i class="error ml143" th:if="${#fields.hasErrors('position')}" th:errors="*{position}"></i>								
 											</div>
 										</div>
 										<div class="form-group" >
@@ -192,18 +202,21 @@
 											<label>性别</label>
 											<input type="radio" th:field="*{sex}" value="MALE"/>男
 											<input type="radio" th:field="*{sex}" value="FEMALE"/>女
+											<i class="error ml143" th:if="${#fields.hasErrors('sex')}" th:errors="*{sex}"></i>
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label class="top"><i>*</i>企业简介</label>
-											<textarea rows="8" th:field="*{content}"></textarea>
+											<textarea rows="8" th:field="*{content}" style="width: 229px;"></textarea>
+											<i class="error ml143" th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></i>
 											</div>
 										</div>
 										<div class="form-group">
 											<div class="fl">
 											<label><i>*</i>企业电话</label>
 											<input type="text" th:field="*{providerPhone}"/>	
+											<i class="error ml143" th:if="${#fields.hasErrors('providerPhone')}" th:errors="*{providerPhone}"></i>
 											</div>
 										</div>
 										<div class="form-group">
@@ -212,6 +225,13 @@
 											<input type="text" th:field="*{fax}"/>
 											</div>
 										</div>
+										<div class="form-group">
+											<div class="fl">
+											<label>公司网址</label>
+											<input type="text" th:field="*{website}"/>		
+											</div>
+										</div>
+										
 									</div>
 								</div>								
 								<div class="form-group">
