--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -18,6 +18,7 @@
     <script src="/js/module/user.js"></script>
     <script src="/js/module/brand.js"></script>
     <script src="/js/module/advertisement.js"></script>
+    <script src="/js/module/uploadDirective.js"></script>
 </head>
 
 <body ng-app="app">
