--- a/admin/src/main/resources/templates/advertisement/advertisement.html
+++ b/admin/src/main/resources/templates/advertisement/advertisement.html
@@ -2,7 +2,7 @@
 <div class="contentpanel">
     <form class="form-inline">
         <div class="form-group">
-            <a class="btn btn-success btn-sm" ui-sref="createAdvertise">添加</a>
+            <a class="btn btn-success btn-sm" ng-click="create()">添加</a>
         </div>
         <div class="form-group company-select">
             <select ng-model="state" ng-change="search()">
@@ -24,7 +24,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="item in items">
-                <td>{{$index+1}}</td>
+                <td ng-click="view(item)">{{$index+1}}</td>
                 <td>{{item.categoryName}}</td>
                 <td>{{item.url}}</td>
                 <td>{{item.state}}</td>
