--- a/admin/src/main/resources/templates/brand/brandDetail.html
+++ b/admin/src/main/resources/templates/brand/brandDetail.html
@@ -6,17 +6,17 @@
                     <div class="form-group">
                         <label class="control-label col-sm-2">标题</label>
                         <div class="col-sm-6">
-                            <input class="form-control" />
+                            <input class="form-control" ng-model="item.title" />
                         </div>
                     </div>
                     <div class="form-group lhg">
                         <label class="control-label col-sm-2">图片</label>
                         <div class="col-sm-3">
-                            <img src="" width="100" height="100"/>
+                            <img ng-src="{{item.cover}}" width="100" height="100" />
                         </div>
                         <div class="col-sm-6">
                             <button id="uploadImg" class="btn btn-success btn-xs">
-                                <input type="file" file-upload="upload" id="2" index="1" />
+                                <input type="file" file-upload="upload" />
                                 <a href="#">选择文件</a>
                             </button>
                         </div>
@@ -25,7 +25,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary" ng-click="submit()">
                 添加
             </button>
         </div>
