--- a/web/src/main/resources/templates/user/provider/changePassword.html
+++ b/web/src/main/resources/templates/user/provider/changePassword.html
@@ -44,16 +44,12 @@
 						<div class="tab-panel form-control w500">
 							<form th:object="${form}" th:method="post">
 								<div class="form-group">
-									<label><i>*</i>旧密码</label> <input type="text"
-										th:field="*{oldPassword}" /> <i class="error"
-										th:if="${#fields.hasErrors('oldPassword')}"
-										th:errors="*{oldPassword}">必填</i>
+									<label><i>*</i>旧密码</label> <input type="password" th:field="*{oldPassword}" /> 
+									<i class="error" th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}">必填</i>
 								</div>
 								<div class="form-group">
-									<label><i>*</i>新密码</label> <input type="text"
-										th:field="*{newPassword}" /> <i class="error"
-										th:if="${#fields.hasErrors('newPassword')}"
-										th:errors="*{newPassword}">必填</i>
+									<label><i>*</i>新密码</label> <input type="password" th:field="*{newPassword}" /> 
+									<i class="error" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"></i>
 								</div>
 								<input type="hidden" th:name="${_csrf.parameterName}"
 									th:value="${_csrf.token}" />
