information list feature

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -19,6 +19,7 @@
     <script src="/js/module/brand.js"></script>
     <script src="/js/module/advertisement.js"></script>
     <script src="/js/module/uploadDirective.js"></script>
+    <script src="/js/module/info.js"></script>
 </head>
 
 <body ng-app="app">
@@ -58,7 +59,7 @@
                         <a ui-sref="advertise">广告发布</a>
                     </li>
                     <li>
-                        <a ui-sref="advertise">信息发布</a>
+                        <a ui-sref="info">信息发布</a>
                     </li>
                     <li>
                         <a href="customer.html">客户行为统计</a>
