--- a/web/src/main/resources/templates/user/provider/detail.html
+++ b/web/src/main/resources/templates/user/provider/detail.html
@@ -34,7 +34,7 @@
 				<div class="aside fl">
 					<a class="active">个人资料</a>
 					<a href="/provider/products?form">发布商品</a>
-					<a href="/provider/products/ALL">商品维护</a>
+					<a href="/provider/products">商品维护</a>
 					<a href="/provider/count">商品信息统计</a>
 				</div>
 				<div class="mainpanel fr">
