--- a/web/src/main/resources/templates/user/provider/maintain.html
+++ b/web/src/main/resources/templates/user/provider/maintain.html
@@ -30,16 +30,16 @@
 				</div>
 				<div class="mainpanel fr">
 					<div class="tabs-nav info-tabs bodr inherit">
-						<a class="active" th:if="${status.toString()=='ALL'}">全部</a>
-						<a th:if="${status.toString()!='ALL'}" href="/provider/products/ALL">全部</a>
-						<a class="active" th:if="${status.toString()=='VERIFY'}">审核中</a>
-						<a th:if="${status.toString()!='VERIFY'}" href="/provider/products/VERIFY">审核中</a>
-						<a class="active" th:if="${status.toString()=='PASS'}">已上架</a>
-						<a th:if="${status.toString()!='PASS'}" href="/provider/products/PASS">已上架</a>
-						<a class="active" th:if="${status.toString()=='OUT'}">已下架</a>
-						<a th:if="${status.toString()!='OUT'}" href="/provider/products/OUT">已下架</a>
-						<a class="active" th:if="${status.toString()=='NOPASS'}">未通过</a>
-						<a th:if="${status.toString()!='NOPASS'}" href="/provider/products/NOPASS">未通过</a>
+						<a class="active" th:if="${status==null}" id="all">全部</a>
+						<a th:if="${status!=null}" href="/provider/products" id="all">全部</a>
+						<a class="active" th:if="${status!=null and status.toString()=='EXAMINE'}">审核中</a>
+						<a th:if="${status==null || status.toString()!='EXAMINE'}" href="/provider/products/EXAMINE">审核中</a>
+						<a class="active" th:if="${status !=null and status.toString()=='UP'}">已上架</a>
+						<a th:if="${status==null || status.toString()!='UP'}" href="/provider/products/UP">已上架</a>
+						<a class="active" th:if="${status!=null and status.toString()=='DOWN'}">已下架</a>
+						<a th:if="${status==null || status.toString()!='DOWN'}" href="/provider/products/DOWN">已下架</a>
+						<a class="active" th:if="${status!=null and status.toString()=='NOT'}">未通过</a>
+						<a th:if="${status==null || status.toString()!='NOT'}" href="/provider/products/NOT">未通过</a>
 					</div>
 					<div class="tab-conts">
 						<div class="tab-panel">
@@ -57,26 +57,26 @@
 								<tbody>
 									<tr th:each="product:${lists.getContent()}" th:id="'tr'+${product.id}">
 										<td th:text="${#dates.format(product.createdTime, 'yyyy-MM-dd')}">2015年01月11日</td>
-										<td><a th:text="${product.name}" th:href="'/products/'+${product.id}">名称名称</a></td>
+										<td><a th:text="${product.name}" th:href="'/products/'+${product.id}" target="view_window">名称名称</a></td>
 										<td>
 											<span class="one-sort" th:text="${#strings.abbreviate(product.firstCategory.name,15)}">仪器</span>
 											<span th:text="${#strings.abbreviate(product.secondCategory.name,15)}">生物芯片</span>
 											<span th:text="${#strings.abbreviate(product.thirdCategory.name,15)}">芯片扫描仪</span>
 										</td>
 										<td>￥<i th:text="${product.price}"></i></td>
-										<td><i th:switch="${product.original.toString()}">
-											<a th:case="${'VERIFY'}">审核中</a>
-											<a th:case="${'PASS'}">已上架</a>
-											<a th:case="${'NOPASS'}">未通过</a>
-											<a th:case="${'OUT'}">已下架</a>
+										<td><i th:switch="${product.status.toString()}">
+											<a th:case="${'EXAMINE'}">审核中</a>
+											<a th:case="${'UP'}">已上架</a>
+											<a th:case="${'NOT'}">未通过</a>
+											<a th:case="${'DOWN'}">已下架</a>
 											</i></td>
 										<td class="show-wrap">
-											<i th:switch="${product.original.toString()}">
-												<i class="blue" th:case="${'VERIFY'}"><a th:attr="data-id=${product.id}" class="off">撤销</a></i>
-												<i class="blue" th:case="${'PASS'}">
-													<a class="blue nopass" th:attr="data-id=${product.id}">下架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue">修改</a></i>
-												<i class="blue" th:case="${'NOPASS'}"><a class="blue">修改</a></i>
-												<i class="blue" th:case="${'OUT'}">
+											<i th:switch="${product.status.toString()}" >
+												<i class="blue" th:case="${'EXAMINE'}" th:attr="data-id=${product.id}"><a th:attr="data-id=${product.id}" class="off">撤销</a></i>
+												<i class="blue" th:case="${'UP'}" th:attr="data-id=${product.id}">
+													<a class="blue nopass" >下架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue">修改</a></i>
+												<i class="blue" th:case="${'DOWN'}" th:attr="data-id=${product.id}"><a class="blue pass" th:attr="data-id=${product.id}">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue">修改</a></i>
+												<i class="blue" th:case="${'NOT'}" th:attr="data-id=${product.id}">
 													<a class="blue pass" th:attr="data-id=${product.id}">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue">修改</a></i>
 											</i>
 											
