--- a/web/src/main/resources/templates/user/provider/release.html
+++ b/web/src/main/resources/templates/user/provider/release.html
@@ -41,7 +41,7 @@
 				<div class="aside fl">
 					<a href="/provider/detail">个人资料</a>
 					<a class="active">发布商品</a>
-					<a href="/provider/products/ALL">商品维护</a>
+					<a href="/provider/products">商品维护</a>
 					<a href="/provider/count">商品信息统计</a>
 				</div>
 				<div class="mainpanel bodr push-good fr">
