--- a/web/src/main/resources/templates/user/provider/maintain.html
+++ b/web/src/main/resources/templates/user/provider/maintain.html
@@ -7,7 +7,6 @@
   <title>商品维护</title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
   <script th:src="@{/js/jquery-min.js}"></script>
-  <script th:src="@{/js/script.js}"></script>
    <meta name="_csrf" th:content="${_csrf.token}" />
 	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 	<script type="text/javascript" th:src="@{/js/maintain.js}">
@@ -55,7 +54,7 @@
 									</tr>
 								</thead>
 								<tbody>
-									<tr th:each="product:${lists.getContent()}" th:id="'tr'+${product.id}">
+									<tr th:each="product:${lists.getContent()}" th:id="'tr'+${product.id}" th:switch="${product.status.toString()}" >
 										<td th:text="${#dates.format(product.createdTime, 'yyyy-MM-dd')}">2015年01月11日</td>
 										<td><a th:text="${product.name}" th:href="'/products/'+${product.id}" target="view_window">名称名称</a></td>
 										<td>
@@ -70,17 +69,18 @@
 											<a th:case="${'NOT'}">未通过</a>
 											<a th:case="${'DOWN'}">已下架</a>
 											</i></td>
-										<td class="show-wrap">
-											<i th:switch="${product.status.toString()}" >
-												<i class="blue" th:case="${'EXAMINE'}" th:attr="data-id=${product.id}"><a th:attr="data-id=${product.id}" class="off">撤销</a></i>
-												<i class="blue" th:case="${'UP'}" th:attr="data-id=${product.id}">
-													<a class="blue nopass" >下架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue">修改</a></i>
-												<i class="blue" th:case="${'DOWN'}" th:attr="data-id=${product.id}"><a class="blue pass" th:attr="data-id=${product.id}">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue">修改</a></i>
-												<i class="blue" th:case="${'NOT'}" th:attr="data-id=${product.id}">
-													<a class="blue pass" th:attr="data-id=${product.id}">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue">修改</a></i>
-											</i>
-											
-										</td>
+											<td class="show-wrap" th:attr="data-id=${product.id}" th:case="${'EXAMINE'}">
+													<a class="blue revoke">撤销</a>
+											</td>
+											<td class="show-wrap" th:attr="data-id=${product.id}" th:case="${'UP'}">
+													<a class="blue down">下架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify">修改</a>
+											</td>
+											<td class="show-wrap1" th:attr="data-id=${product.id}" th:case="${'DOWN'}">
+													<a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify">修改</a>
+											</td>
+											<td class="show-wrap1" th:attr="data-id=${product.id}" th:case="${'NOT'}">
+													<a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify">修改</a>
+											</td>
 									</tr>
 								</tbody>
 							</table>
@@ -90,18 +90,30 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="footer">
 		© 1998 - 2015 SJ Inc. All Rights Reserved
 	</div>
 	<div class="fixed"></div>
-	<div class="hide-wrap bodr">
+	<div class="hide-wrap bodr" id="down">
 		<div class="hide-con">
 			<h2>该商品已上架，确认是否下架此商品</h2>
 			<div class="foot-btn">
-				<button class="btn green ft14">确认</button>
-				<button class="btn default cancel">取消</button>
+				<button class="btn green ft14" id="downOk">确认</button>
+				<button class="btn default cancel" id="downCancel">取消</button>
 			</div>
 		</div>
+	</div>
+	<div class="hide-wrap bodr" id="revoke">
+		<div class="hide-con">
+			<h2>该商品正在审核，是否撤销</h2>
+			<div class="foot-btn">
+				<button class="btn green ft14" id="revokeOk">确认</button>
+				<button class="btn default cancel" id="revokeCancel">取消</button>
+			</div>
+		</div>
+	</div>
+	<div class="hide-wrap bodr update-pro" id="modify" style="display: display;">
 	</div>
 </body>
 </html>	
