--- a/web/src/main/resources/templates/user/provider/release.html
+++ b/web/src/main/resources/templates/user/provider/release.html
@@ -15,7 +15,6 @@
 	<script th:src="@{/js/ckeditor/adapters/jquery.js}"></script>
 	<script>
         $(function() {
-            var cache={};
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_parameterName']").attr("content");
             $(document).ajaxSend(function(e, xhr, options) {
@@ -24,7 +23,7 @@
             $('#content').ckeditor({
                 filebrowserUploadUrl : '/img/upload?' + header + "=" + token,
                 width : 630,
-                 height : 295
+                 height : 300
             });
         });
 	</script>
@@ -44,27 +43,43 @@
 					<a href="/provider/products">商品维护</a>
 					<a href="/provider/count">商品信息统计</a>
 				</div>
-				<div class="mainpanel bodr push-good fr">
+				<div class="mainpanel bodr basic-info push-good fr">
 					<form th:object="${product}" method="post">	
 						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> 		
 						<div class="form-group">
+							<div class="fl">
 							<label><i>*</i>产品名称</label>
 							<input type="text" th:field="*{name}"/>
+							<i class="error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></i>
+							</div>
+							<div class="fl">
 							<label>产品英文名</label>
 							<input type="text" th:field="*{nameEnglish}"/>
+							<i class="error" th:if="${#fields.hasErrors('nameEnglish')}" th:errors="*{nameEnglish}"></i>
+							</div>
 						</div>
 						<div class="form-group">
+							<div class="fl">
 							<label><i>*</i>产品型号</label>
 							<input type="text" th:field="*{model}"/>
+							<i class="error" th:if="${#fields.hasErrors('model')}" th:errors="*{model}"></i>
+							</div>
+							<div class="fl">
 							<label><i>*</i>产品规格/单位</label>
 							<input type="text" th:field="*{specifications}"/>
+							<i class="error" th:if="${#fields.hasErrors('specifications')}" th:errors="*{specifications}"></i>
+							</div>
 						</div>
 						<div class="form-group">
+							<div class="fl">
 							<label><i>*</i>品牌</label>
 							<select class="w235" th:field="*{brand}">
 								<option value="">请选择</option>
 								<option th:each="brand:${brands}" th:text="${brand.name}" th:value="${brand.id}"></option>
 							</select>
+							<i class="error" th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></i>
+							</div>
+							<div class="fl">
 							<label><i>*</i>产地</label>
 							<select class="w235" th:field="*{placeOfProduction}">
 								<option value="">请选择</option>
@@ -72,25 +87,42 @@
 								<option th:value="EUROPEANDUS">欧美</option>
 								<option th:value="OTHER">其他</option>
 							</select>
+							<i class="error" th:if="${#fields.hasErrors('placeOfProduction')}" th:errors="*{placeOfProduction}"></i>
+							</div>
 						</div>
 						<div class="form-group">
+							<div class="fl">
 							<label><i>*</i>参考报价</label>
-							<input type="text" th:field="*{price}"/>
+							<input type="text" th:field="*{price}" />
+							<i class="error" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></i>
+							</div>
 						</div>
 						<div class="form-group">
-							<label><i>*</i>产品类别</label>
+							<div class="fl">
+							<label><i>*</i>产品分类</label>
 							<select class="w200" th:field="*{firstCategory}">
 								<option value="">请选择</option>
 								<option th:each="category:${pcs}" th:value="${category.id}" th:text="${category.name}"></option>
 							</select>
+							<i class="error" th:if="${#fields.hasErrors('firstCategory')}" th:errors="*{firstCategory}"></i>
+							</div>
+							<div class="fl">
 							<select class="w200" th:field="*{secondCategory}">
 							</select>
+							<i class="error" th:if="${#fields.hasErrors('secondCategory')}" th:errors="*{secondCategory}"></i>
+							</div>
+							<div class="fl">
 							<select class="w200" th:field="*{thirdCategory}">
 							</select>
+							<i class="error" th:if="${#fields.hasErrors('thirdCategory')}" th:errors="*{thirdCategory}"></i>
+							</div>
 						</div>
 						<div class="form-group">
+							<div class="fl">
 							<label><i>*</i>标签</label>							
 							<input type="text" class="w630" th:text="*{label}"/>
+							<i class="error" th:if="${#fields.hasErrors('label')}" th:errors="*{label}"></i>
+							</div>
 						</div>	
 						<div class="form-group">
 							<label><i>*</i>产品图片</label>							
@@ -98,7 +130,7 @@
 							<span class="file-type">(只上传小于XXXK的图片)</span>
 						</div>	
 						<div class="form-group clearfix" style="height: 400px;">
-							<label class="fl"><i>*</i>产品介绍</label>							
+							<label class="fl">产品介绍</label>							
 							<div class="fl edit w630" style="height: 400px;">
 								<textarea th:id="content" th:field="*{content.content}"></textarea>
 							</div>
