--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -159,20 +159,29 @@
 				<textarea rows="6" th:field="*{content}"></textarea>			
 				<i class="error" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">必填</i>
 			</div>
-			<div class="form-group">
+			<div class="form-group files">
 				<label><i>*</i>企业营业执照上传</label>
-				<input type="file" name="businessLicense"/>	
-				<i class="error" th:if="${#fields.hasErrors('businessLicenseUrl')}" th:errors="*{businessLicenseUrl}">必填</i>			
+				<img src="img/banner1.jpg" width="100" height="100" />
+				<button id="uploadImg">
+                    <input type='file'/>
+                    <a href="#">选择文件</a>
+                </button>		
 			</div>
-			<div class="form-group">
+			<div class="form-group files">
 				<label><i>*</i>税务登记证上传</label>
-				<input type="file" name="taxRegistration"/>				
-				<i class="error" th:if="${#fields.hasErrors('taxRegistrationUrl')}" th:errors="*{taxRegistrationUrl}">必填</i>
+				<img src="img/banner1.jpg" width="100" height="100" />
+				<button id="uploadImg">
+                    <input type='file'/>
+                    <a href="#">选择文件</a>
+                </button>				
 			</div>
-			<div class="form-group">
+			<div class="form-group files">
 				<label><i>*</i>组织结构代码证上传</label>
-				<input type="file" name="structureCode"/>				
-				<i class="error" th:if="${#fields.hasErrors('structureCodeUrl')}" th:errors="*{structureCodeUrl}">必填</i>
+				<img src="img/banner1.jpg" width="100" height="100" />
+				<button id="uploadImg">
+                    <input type='file'/>
+                    <a href="#">选择文件</a>
+                </button>				
 			</div>
 			<div class="hd resg-hd">
 				<span>联系信息</span>
