商品发布部分代码

--- a/web/src/main/resources/templates/user/provider/release.html
+++ b/web/src/main/resources/templates/user/provider/release.html
@@ -13,6 +13,7 @@
   <meta name="_csrf" th:content="${_csrf.token}" />
 	<meta name="_csrf_parameterName" th:content="${_csrf.parameterName}" />	
 	<script th:src="@{/js/ckeditor/adapters/jquery.js}"></script>
+	<script th:src="@{/js/modifyAction.js}"></script>
 	<script>
         $(function() {
             var token = $("meta[name='_csrf']").attr("content");
